--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #a03B4252
+background = #a33B4252
 background-alt = #434C5E
 foreground = #C5C8C6
 primary = #F0C674
@@ -29,7 +29,7 @@ underline-green = #A3BE8C
 
 ;##########################################################
 [bar/base]
-monitor = ${env:MONITOR:DP-0}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 20pt
 radius = 0
@@ -39,8 +39,8 @@ radius = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-;wm-restack= 
-;override-redirect = false
+;wm-restack=
+;override-redirect = true
 
 font-0 = MesloLGS-NF-Regular:1;4
 font-1 = "Iosevka Nerd Font:size=14;4"
@@ -51,7 +51,7 @@ padding-left = 2
 padding-right = 2
 
 modules-left =  xworkspaces
-modules-right = cpu gpu date
+modules-right = cpu gpu memory date
 modules-center = spotify previous playpause next
 
 cursor-click = pointer
@@ -159,3 +159,17 @@ warn-percentage = 95
 label = %percentage%%
 format = %{T2} %{T-} %{T1}<label>%{T-}
 format-underline = #BF616A
+;##########################################################
+
+[module/memory]
+type = internal/memory
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 1
+
+; Default: 90
+; New in version 3.6.0
+warn-percentage = 95
+label = %{T2}%{T-}   %gb_used%
+label-underline = #B48EAD
